Removed extra file

--- a/Lab 2.Rmd
+++ b/Lab 2.Rmd
@@ -19,9 +19,6 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r, include = FALSE}
 # Second step
-
-
-
 ```
 
 #Basic Static Maps
@@ -40,58 +37,41 @@ knitr::opts_chunk$set(echo = TRUE)
 # Fourth and fifth step. Static or interactive map. Subset of a tract? Two layers
 library(tidyverse)
 library(tigris)
-library(tmap)
-library(ggplot2)
 library(leaflet)
 library(stringr)
 library(sf)
 library(tidycensus)
+od_all_both <- read.csv(file="OD_TEST_TRACT.csv")
+OD <- od_all_both %>% select(work_tract, home_tract, S000)
+ok_work_tract <- od_all_both %>% filter(work_tract == home_tract)
 
-od_all_both <- read.csv(file="OD_tract_aggregation.csv")
-
-OD <- od_all_both %>% filter(work_tract == home_tract) %>% select(work_tract, home_tract, S000)
-
-
-library(tidyverse)
-library(tidycensus)
-library(leaflet)
-library(stringr)
-library(sf)
-
+library(RColorBrewer)
 
 tracts <- tracts("40", "109")
-
-ok_all <- geo_join(tracts, OD, by_sp="GEOID", by_df="work_tract")
-
-
-pal <- colorQuantile(palette = "viridis", domain = ok_all$S000, n = 10)
-
+ok_all <- geo_join(tracts, OD, by_sp="GEOID", by_df="home_tract")
+ok_work_tract <- geo_join(tracts, ok_work_tract, by_sp="GEOID", by_df="home_tract")
+pal <- colorNumeric("Reds", domain = ok_all$S000)
 ok_all <- ok_all %>%
-    leaflet(width = "100%") %>%
-    addProviderTiles(provider = "CartoDB.Positron") %>%
-    addPolygons(
-                stroke = FALSE,
-                smoothFactor = 0,
-                fillOpacity = 0.7,
-                color = ~ pal(S000)) %>%
-    addLegend("bottomright", 
-              pal = pal, 
-              values = ~ S000,
-              title = "Population percentiles",
-              opacity = 1)
-
-
+          leaflet(width = "100%") %>%
+          addProviderTiles(provider = "CartoDB.Positron") %>%
+          addPolygons(popup = ~ str_extract(S000, "^([^,]*)"),
+                      color = "#444444",
+                      weight = 1,
+                      smoothFactor = 0,
+                      fillOpacity = 0.7,
+                      fillColor = ~ pal(S000)) %>%
+          addLegend("bottomright", 
+                    pal = pal, 
+                    values = ~ S000,
+                    title = "How many people live in each tract that work in tract: 40109108601",
+                    opacity = 1)
 ```
 
 ```{r, echo=FALSE}
-
 ok_all
-
-
 ```
 
 #Additional Analysis
 ```{r, include = FALSE}
 # at least one additional geocomputation
 ```
-
